[package]
name = "amethyst_system_proc_macro"
version = "0.4.0"
description = "#[system] proc macro for the amethyst library"
authors = ["Zane \"Ketexon\" Clark <xketexon@gmail.com>"]
repository = "https://github.com/ketexon/amethyst_system_proc_macro"
keywords = ["ecs", "game"]
categories = ["game-engines", "data-structures"]
readme = "readme.md"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
thiserror = "1.0"
